# evo-spark

./: ESP32-S3-xiaozhi-esp32-开发教程.md  EvoSpark-v2-DESIGN.md  README.md
Evospark-v2/: BUG_REPORT.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Evospark-v2/main/: CMakeLists.txt  main.cc
Evospark-v2/main/actuator/: led_controller.cc  led_controller.h
Evospark-v2/main/ai/: llm_client.cc  llm_client.h
Evospark-v2/main/config/: config_manager.cc
Evospark-v2/main/core/: event_bus.cc  event_bus.h  session_manager.cc  session_manager.h
Evospark-v2/main/display/: lcd_driver.cc  lcd_driver.h  ui_manager.cc  ui_manager.h
Evospark-v2/main/input/: button.cc  button.h
Evospark-v2/main/memory/: conversation_buffer.cc  conversation_buffer.h  memory_manager.cc  memory_manager.h  memory_types.h  prompt_builder.cc  prompt_builder.h
Evospark-v2/main/perception/audio/: i2s_audio.cc  i2s_audio.h  microphone.cc  microphone.h  speaker.cc  speaker.h
Evospark-v2/main/perception/camera/: camera_manager.cc  camera_manager.h
Evospark-v2/main/perception/vision/: yolo_detector.cc  yolo_detector.h
Evospark-v2/main/storage/: flash_storage.cc  flash_storage.h
Evospark-v2/main/web/: web_server.cc  web_server.h
Evospark-zero/: .gitignore  CMakeLists.txt  README.md  init.sh  partitions.csv  task.json
Evospark-zero/main/: CMakeLists.txt  main.cc  test_CMakeLists.txt  test_main.cc
Evospark-zero/main/api/: glm_client.cc  glm_client.h
Evospark-zero/main/config/: config_manager.cc  config_manager.h
Evospark-zero/main/memory/: compress_memory_patch.cc  conversation_buffer.cc  conversation_buffer.h  memory_manager.cc  memory_manager.h  memory_types.cc  memory_types.h
Evospark-zero/main/storage/: flash_storage.cc  flash_storage.h
Evospark-zero/main/web/: web_server.cc  web_server.h
